- Removed old showModal implementation - Added a fully rewritten showModal with cleaner logic and template injection - Created templates.js and moved modal HTML templates into separate functions - Updated app.js to import and use modal templates for add/edit/remove modals - Switched form-related global variables to null and initialized them inside showModal - Added null-check before binding formTitle and formAuthor events to prevent runtime errors   (if (formTitle && formAuthor) { addEventListener(...) }) - Improved reliability of addBook and editBook modals after refactoring - Transferred modal templates for add/edit/remove book into templates.js

--- a/index.html
+++ b/index.html
@@ -442,66 +442,12 @@
     <!-- --------------------- Modals & Login --------------------- -->
     <div class="modal-backdrop hidden">
       <section class="modal-screen glass-card">
-        <svg class="modal-screen__del-icon hidden">
-          <use href="#icon-del-form"></use>
-        </svg>
         <h1 class="modal-screen__header">
           <!-- Load from js -->
         </h1>
         <!-- --------------------- Modal Add & Edit & Form Login Body --------------------- -->
         <div class="modal-screen__body">
           <!-- --------------------- Form Modals --------------------- -->
-          <form class="form">
-            <!-- --------------------- Title --------------------- -->
-            <div>
-              <label for="form__title">عنوان کتاب</label>
-              <p><span class="modal-screen__maxlength-title">0</span>/30</p>
-            </div>
-            <input
-              class="glass-card"
-              type="text"
-              maxlength="30"
-              name="form__title"
-              id="form__title"
-            />
-            <!-- --------------------- Author --------------------- -->
-            <div>
-              <label for="form__author">نویسنده</label>
-              <p><span class="modal-screen__maxlength-author">0</span>/30</p>
-            </div>
-            <input
-              maxlength="30"
-              class="glass-card"
-              type="text"
-              name="form__author"
-              id="form__author"
-            />
-            <!-- --------------------- Status --------------------- -->
-            <label for="form__status">وضعیت</label>
-            <select
-              class="glass-card"
-              name="form__status"
-              value=""
-              id="form__status"
-            >
-              <option value="new">کتاب جدید</option>
-              <option value="reading">درحال خواندن</option>
-              <option value="done">خوانده شده</option>
-            </select>
-            <!-- --------------------- Score --------------------- -->
-            <label for="form__score">امتیاز</label>
-            <input
-              max="5"
-              min="1"
-              value="1"
-              class="glass-card"
-              type="number"
-              name="form__score"
-              id="form__score"
-              placeholder="امتیاز از 1 تا 5 "
-            />
-          </form>
-          <!-- --------------------- Form Login --------------------- -->
           <form class="form-login hidden">
             <!-- --------------------- Username --------------------- -->
             <label for="form-login__username">نام کاربری</label>
@@ -562,15 +508,11 @@
             <span>ورود با ایمیل</span>
             <span>فراموشی رمز عبور</span>
           </div>
-          <!-- --------------------- Modal del Book Body --------------------- -->
-          <p class="modal-screen__body-text hidden">
-            آیا مطمئن هستید که می‌خواهید این کتاب را حذف کنید؟
-          </p>
         </div>
         <!-- --------------------- Modals & Login Buttons --------------------- -->
         <div class="modal-screen__btns">
           <button class="modal-screen__login-btn hidden">ورود</button>
-          <button class="modal-screen__del-btn hidden">حذف</button>
+          <button class="modal-screen__del-btn">حذف</button>
           <button class="modal-screen__save-btn">ذخیره</button>
           <button class="modal-screen__cancel-btn">انصراف</button>
         </div>
@@ -580,6 +522,6 @@
     <section class="toast-container">
       <!-- Load From Js -->
     </section>
-    <script src="./js/app.js"></script>
+    <script type="module" src="./js/app.js"></script>
   </body>
 </html>
