Move login/signup modal templates to templates.js and wire showModal events
- Modal templates for login and signup moved from HTML to templates.js
- Added showModal events to main__btn-login and main__btn-signup buttons
- Modal now correctly displays login or signUp views

--- a/index.html
+++ b/index.html
@@ -445,73 +445,12 @@
         <h1 class="modal-screen__header">
           <!-- Load from js -->
         </h1>
-        <!-- --------------------- Modal Add & Edit & Form Login Body --------------------- -->
         <div class="modal-screen__body">
-          <!-- --------------------- Form Modals --------------------- -->
-          <form class="form-login hidden">
-            <!-- --------------------- Username --------------------- -->
-            <label for="form-login__username">نام کاربری</label>
-            <div class="form-login__input">
-              <input
-                class="glass-card"
-                type="text"
-                name="form-login__username"
-                id="form-login__username"
-              />
-              <svg class="form-login__icon">
-                <use href="#icon-username"></use>
-              </svg>
-            </div>
-            <!-- --------------------- Password --------------------- -->
-            <label for="form-login__password">رمز عبور</label>
-            <div class="form-login__input">
-              <input
-                class="glass-card"
-                type="password"
-                name="form-login__password"
-                id="form-login__password"
-              />
-              <svg class="form-login__icon form-login__icon--toggle">
-                <use href="#icon-show"></use>
-                <!-- <use href="#icon-hidden"></use> -->
-              </svg>
-            </div>
-            <!-- --------------------- Email --------------------- -->
-            <label for="form-login__email">آدرس ایمیل</label>
-            <div class="form-login__input">
-              <input
-                class="glass-card"
-                type="text"
-                name="form-login__email"
-                id="form-login__email"
-              />
-              <svg class="form-login__icon">
-                <use href="#icon-email"></use>
-              </svg>
-            </div>
-            <!-- --------------------- Phone --------------------- -->
-            <label for="form-login__phone">شماره موبایل</label>
-            <div class="form-login__input">
-              <input
-                class="glass-card"
-                type="text"
-                name="form-login__phone"
-                id="form-login__phone"
-              />
-              <svg class="form-login__icon">
-                <use href="#icon-phone"></use>
-              </svg>
-            </div>
-          </form>
-          <!-- --------------------- Form Login Body --------------------- -->
-          <div class="login__body-text hidden">
-            <span>ورود با ایمیل</span>
-            <span>فراموشی رمز عبور</span>
-          </div>
+          <!-- Load from js -->
         </div>
         <!-- --------------------- Modals & Login Buttons --------------------- -->
         <div class="modal-screen__btns">
-          <button class="modal-screen__login-btn hidden">ورود</button>
+          <button class="modal-screen__login-btn"></button>
           <button class="modal-screen__del-btn">حذف</button>
           <button class="modal-screen__save-btn">ذخیره</button>
           <button class="modal-screen__cancel-btn">انصراف</button>
