Add 'hidden' class to header and main sections
- Added 'hidden' class to header__center-wrapper, header__bottom-wrapper, and main__auth-required in HTML

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
           </p>
         </div>
         <!-- --------------------- Header Center Wrapper --------------------- -->
-        <div class="header__center-wrapper">
+        <div class="header__center-wrapper hidden">
           <!-- --------------------- Header status cards --------------------- -->
           <div class="header__stats-cards">
             <div class="glass-card">
@@ -402,7 +402,7 @@
           </button>
         </div>
         <!-- --------------------- Header Bottom Wrapper --------------------- -->
-        <div class="header__bottom-wrapper">
+        <div class="header__bottom-wrapper hidden">
           <!-- --------------------- Header Filter Btns --------------------- -->
           <button class="header__filter-btn glass-card active">
             همه کتاب‌ها
@@ -415,7 +415,7 @@
       <!-- --------------------- Main --------------------- -->
       <main id="main">
         <!-- --------------------- For Pre Login And User Registration --------------------- -->
-        <section class="main__auth-required">
+        <section class="main__auth-required hidden">
           <h1 class="main__header">
             برای استفاده از این کتابخانه ابتدا باید ثبت‌نام کنید یا اگر حساب
             دارید وارد شوید
