add LogOut Btn To HTML & CSS

--- a/index.html
+++ b/index.html
@@ -397,9 +397,12 @@
             </div>
           </div>
           <!-- --------------------- Header status Button --------------------- -->
-          <button class="glass-card header__create-btn">
-            ➕ افزودن کتاب جدید
-          </button>
+           <div class="header__center-btns">
+             <button class="glass-card header__logout-btn">خروج</button>
+             <button class="glass-card header__create-btn">
+               ➕ افزودن کتاب جدید
+             </button>
+           </div>
         </div>
         <!-- --------------------- Header Bottom Wrapper --------------------- -->
         <div class="header__bottom-wrapper hidden">
@@ -450,6 +453,7 @@
         </div>
         <!-- --------------------- Modals & Login Buttons --------------------- -->
         <div class="modal-screen__btns">
+          <button class="modal-screen__logout-btn">خروج</button>
           <button class="modal-screen__login-btn"></button>
           <button class="modal-screen__del-btn">حذف</button>
           <button class="modal-screen__save-btn">ذخیره</button>
